add work with db for table with users